2002-12-11  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* 0FAQ, show.c, version.c: Get ready for 3.7.3 release.

2002-12-11  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* term/djsvga.trm, term/eepic.trm, term/epson.trm, term/fig.trm,
	term/gif.trm, term/latex.trm, term/mif.trm, term/post.trm,
	term/pslatex.trm, term/tpic.trm, term/xlib.trm: More of same.

2002-12-04  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/be.trm, term/cgm.trm, term/x11.trm: Fix
	documentation misprints.

2002-11-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* win/winmain.c (WinMain) [MSC, WIN32]: Use predefined __argc and
 	__argv instead of old hack to generate them from scratch, which
 	couldn't cope with blanks in file names or quoted arguments.

2002-11-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* graphics.c (do_plot): Get rid of old xtic and ytic #defines.
	(setup_tics): For series tics on log axes, logarithmize tic step
 	for use by endpoint fixups.
	(gen_tics): Rewrite handling of series tics on log axes.  Handle
 	un-specified ticking endpoints.  Handle both negative values and
 	negative exponents of the stepsize correctly, and also negative
 	user-specified endpoints.

2002-11-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/svg.trm (SVG_init): Backports from 3.8 branch: adds the
 	viewBox attribute to the <svg> tag, and replaces the original SVG
 	terminal author's name by the gnuplot version in the <desc>.

2002-11-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* makefile.dj2, makefile.tc: Update CFLAGS.

	* plot2d.c, plot3d.c: Convert INIT_ARRAYS() macros to functions to
	fix build for 16-bit Windows.

	* specfun.c: Add missing preprocessor symbols to fix build under
	DJGPP V2.

2002-11-05  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix more misprints.

2002-11-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
